[package]
name = "taxicab-map"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Coordinate transformation and pathfinding for Taxicab Geometry."
repository = "https://github.com/oovm/taxicab-map"
documentation = "https://docs.rs/taxicab-map"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.159", features = ["derive"] }
ndarray = "0.15.6"

[dev-dependencies]

[features]
default = []
